--- a/web/index.html
+++ b/web/index.html
@@ -2,13 +2,20 @@
 <html ng-app="PersonDemo" ng-controller="UserController as ctrl">
     <head>
         <meta charset="UTF-8">
-        <link rel="shortcut icon" href="assets/nerd.ico">
+        <link rel="shortcut icon" href="app/sassets/nerd.ico">
         <title>{{ctrl.title}}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-        <script type="text/javascript" src="https://code.angularjs.org/1.4.7/angular-route.min.js"></script>
-        <script type="text/javascript" src="js/app.js"></script>
+        <!-- jQuery -->
+        <script src ="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+        <!-- Bootstrap -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <!-- AngularJS -->
+        <script src ="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+        <!-- route --><script src ="https://code.angularjs.org/1.5.0-rc.0/angular-route.min.js"></script>
+        <!-- Custom components -->
+        <script type="text/javascript" src="app/app.js"></script>
     </head>
     <body>
         <div class="container">
